first_test/service_and_ingress/simple-externalname-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gihyo
spec:
  type: ExternalName
  externalName: gihyo.jp

# ExternalName Serviceは、Kubenetesクラスタ内から外部のホストを解決するためのエイリアス
# 上記では、gihyo.jpをgihyoで名前解決できる
