first_test/service_and_ingress/simple-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo
#   annotations:
#     nginx.ingress.kubernetes.io/server-snippet: |
#       set $agentflag 0;

#       if($http_user_agent ~*"(Mobile)"){
#         set &agentflag 1;
#       }

#       if($agentflag = 1){
#         return 301 http://gihyo.jp/;
#       }
      
spec:
  rules:
  - host: ch05.gihyo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: echo # simple-service.yamlのmetadata.nameと合わせる
          servicePort: 80 # Serviceが公開しているPort

# インターネット → ingress → service
# Ingressは、負荷分散、SSL設定などができる
# Ingress Controllerとセットで初めて使える
